Implement file interfaces, A files service has been created to handle files and folders via FileSystem class which uses FileSystemInterface. Currently working: create folders (within the root area which is public/files), create files, list a folder (its not complete) On the front-end I've implemented a grid system from my former project, I will do a list controller from that.

--- a/phalcon/app/views/layouts/base.phtml
+++ b/phalcon/app/views/layouts/base.phtml
@@ -1,9 +1,21 @@
 <?php
 
 use Phalcon\Mvc\Url;
+use Phalcon\DI\FactoryDefault;
 
-$url = new Url();
+
+$di = \Phalcon\DI\FactoryDefault::getDefault();
+$url = $di->getShared('url');
 ?>
+
+<script>
+    var objData = [];
+    objData['root_url'] = '<?php echo $url->getBaseUri();?>';
+    objData['environment'] = 'dev';
+    $(document).ready(function(){
+       jasApp.init(objData)
+    });
+</script>
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
