--- a/phalcon/public/assets/custom/css/less/custom.less
+++ b/phalcon/public/assets/custom/css/less/custom.less
@@ -1,8 +1,13 @@
+p {
+  font-color: green;
+}
+
 .navbar{
     border-radius: 0px;
 }
 
 .manager {
+
     .manager-left {
       @media (min-width: 768px) {
         padding: 0 4px 0 0;
@@ -38,4 +43,12 @@
         padding:4px;
         margin-top: 4px;
     }
+}
+
+ul.result-list li {
+  list-style: none;
+
+  label.name{
+      font-weight: bold;
+  }
 }
