--- a/phalcon/app/views/layouts/base.phtml
+++ b/phalcon/app/views/layouts/base.phtml
@@ -35,6 +35,7 @@ $url = $di->getShared('url');
             <ul class="nav navbar-nav navbar-right">
                 <li ><a href="<?php echo $url->get('');?>">Welcome </a></li>
                 <li ><a href="<?php echo $url->get('manager/index');?>">File Manager </a></li>
+                <li ><a href="<?php echo $url->get('logger/index');?>">Log </a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
